# tsppdl-unicen

./: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Debug.bal  Makefile.Release  Makefile.Release.bal  Present trabajo algoritmos TSPPDL 2.odp  README.md  a.out  atsp.cpp  atsp_operator.h  compilacion-igraph.txt  crossover.cpp  debug  ejecucion-igraph.txt  graph-mio.h  graph.cpp  graph.h  graphviz  graphvizdotgenerator.cpp  heuristicgenerator.cpp  heuristicgenerator.h  localsearch.cpp  main.cpp  mainwindow-mio.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_script.tsppdl-unicen.Debug  object_script.tsppdl-unicen.Release  perturbation.cpp  result.vns  runner.cpp  swap  tareas.txt  thread.cpp  thread.h  tree.cpp  tree.h  tsp.pro.bak  (+7 more)
datatest/: ran_nn_25.str
datatest/.svn/: all-wcprops  entries
datatest/Type 1/.svn/: all-wcprops  entries
datatest/Type 1/.svn/text-base/: README.txt.svn-base
datatest/Type 1/brd14051/: brd14051_101.tsp  brd14051_251.tsp  ran_nn_501.str  ran_nn_751.str
datatest/Type 1/brd14051/.svn/: all-wcprops  entries
datatest/Type 1/brd14051/.svn/text-base/: brd14051_51.tsp.svn-base  ran_nn_101.str.svn-base  ran_nn_251.str.svn-base  ran_nn_51.str.svn-base  ran_nn_75.str.svn-base
datatest/Type 1/d15112/: d15112_1001.tsp  d15112_501.tsp  ran_nn_101.str  ran_nn_251.str  ran_nn_501.str  ran_nn_75.str
datatest/Type 1/d15112/.svn/: all-wcprops  entries
datatest/Type 1/d15112/.svn/text-base/: d15112_25.tsp.svn-base  match_d15112_1001.mtc.svn-base  ran_nn_1001.str.svn-base  ran_nn_25.str.svn-base  ran_nn_51.str.svn-base  ran_nn_751.str.svn-base
datatest/Type 1/d18512/: d18512_75.tsp  ran_nn_1001.str  ran_nn_25.str  ran_nn_251.str
datatest/Type 1/d18512/.svn/: all-wcprops  entries
datatest/Type 1/d18512/.svn/text-base/: d18512_1001.tsp.svn-base  d18512_101.tsp.svn-base  d18512_25.tsp.svn-base  ran_nn_101.str.svn-base  ran_nn_501.str.svn-base  ran_nn_51.str.svn-base  ran_nn_75.str.svn-base  ran_nn_751.str.svn-base
datatest/Type 1/fnl4461/: fnl4461_1001.tsp  fnl4461_251.tsp  fnl4461_51.tsp  ran_nn_251.str  ran_nn_501.str  ran_nn_51.str  ran_nn_751.str
datatest/Type 1/fnl4461/.svn/: all-wcprops  entries
datatest/Type 1/fnl4461/.svn/text-base/: fnl4461_101.tsp.svn-base  fnl4461_25.tsp.svn-base  fnl4461_501.tsp.svn-base  fnl4461_75.tsp.svn-base  fnl4461_751.tsp.svn-base  ran_nn_1001.str.svn-base  ran_nn_101.str.svn-base  ran_nn_75.str.svn-base
datatest/Type 1/nrw1379/: nrw1379_501.tsp  nrw1379_51.tsp  nrw1379_75.tsp  ran_nn_1001.str  ran_nn_25.str  ran_nn_251.str  ran_nn_51.str
datatest/Type 1/nrw1379/.svn/: all-wcprops  entries
datatest/Type 1/nrw1379/.svn/text-base/: ran_nn_101.str.svn-base  ran_nn_501.str.svn-base  ran_nn_75.str.svn-base  ran_nn_751.str.svn-base
datatest/Type 1/pr1002/: pr1002_1001.tsp  pr1002_101.tsp  pr1002_251.tsp  ran_nn_1001.str  ran_nn_101.str  ran_nn_51.str  ran_nn_75.str
datatest/Type 1/pr1002/.svn/: all-wcprops  entries
datatest/Type 1/pr1002/.svn/text-base/: pr1002_751.tsp.svn-base  ran_nn_25.str.svn-base  ran_nn_251.str.svn-base  ran_nn_501.str.svn-base  ran_nn_751.str.svn-base
datatest/Type 2/.svn/: all-wcprops  entries
datatest/Type 2/.svn/text-base/: README.txt.svn-base
datatest/Type 2/brd14051/: brd14051_1001.tour  brd14051_25.tsp  brd14051_501.tour  brd14051_75.tour  brd14051_75.tsp  brd14051_751.tsp  match_brd14051_751.mtc  ran_nn_101.str  ran_nn_251.str  ran_nn_51.str  ran_nn_75.str  ran_nn_751.str
datatest/Type 2/brd14051/.svn/: all-wcprops  entries
datatest/Type 2/brd14051/.svn/text-base/: brd14051_1001.tsp.svn-base  brd14051_101.tour.svn-base  brd14051_25.tour.svn-base  brd14051_251.tour.svn-base  brd14051_501.tsp.svn-base  brd14051_51.tour.svn-base  (+9 more)
datatest/Type 2/d15112/: d15112_1001.tour  d15112_25.tour  d15112_251.tsp  d15112_501.tour  d15112_51.tsp  d15112_75.tour  d15112_751.tour  d15112_751.tsp  match_d15112_1001.mtc  match_d15112_25.mtc  match_d15112_251.mtc  match_d15112_501.mtc  match_d15112_51.mtc  match_d15112_75.mtc  ran_nn_25.str  ran_nn_501.str  ran_nn_51.str  ran_nn_751.str
datatest/Type 2/d15112/.svn/: all-wcprops  entries
datatest/Type 2/d18512/: d18512_101.tour  d18512_25.tour  d18512_251.tour  d18512_501.tour  d18512_501.tsp  d18512_75.tour  match_d18512_1001.mtc  match_d18512_101.mtc  match_d18512_251.mtc  match_d18512_51.mtc  match_d18512_751.mtc  ran_nn_1001.str  ran_nn_101.str  ran_nn_251.str  ran_nn_501.str  ran_nn_75.str
datatest/Type 2/d18512/.svn/: all-wcprops  entries
datatest/Type 2/fnl4461/: fnl4461_25.tour  fnl4461_25.tsp  fnl4461_251.tour  fnl4461_251.tsp  fnl4461_501.tour  fnl4461_501.tsp  fnl4461_51.tour  fnl4461_51.tsp  fnl4461_75.tsp  match_fnl4461_25.mtc  match_fnl4461_501.mtc  match_fnl4461_51.mtc  ran_nn_1001.str  ran_nn_251.str  ran_nn_501.str  ran_nn_51.str
datatest/Type 2/fnl4461/.svn/: all-wcprops  entries
datatest/Type 2/nrw1379/: match_nrw1379_1001.mtc  match_nrw1379_101.mtc  match_nrw1379_25.mtc  match_nrw1379_501.mtc  match_nrw1379_75.mtc  match_nrw1379_751.mtc  nrw1379_1001.tour  nrw1379_1001.tsp  nrw1379_101.tour  nrw1379_25.tour  nrw1379_25.tsp  nrw1379_251.tsp  nrw1379_751.tour  nrw1379_751.tsp  ran_nn_1001.str  ran_nn_51.str  ran_nn_75.str  ran_nn_751.str
datatest/Type 2/nrw1379/.svn/: all-wcprops  entries
datatest/Type 2/pr1002/: match_pr1002_51.mtc  match_pr1002_75.mtc  match_pr1002_751.mtc  pr1002_1001.tour  pr1002_25.tour  pr1002_25.tsp  pr1002_501.tsp  pr1002_51.tour  pr1002_75.tsp  pr1002_751.tour  ran_nn_101.str  ran_nn_25.str  ran_nn_251.str  ran_nn_51.str  ran_nn_751.str
datatest/Type 2/pr1002/.svn/: all-wcprops  entries
igraph/lib/: libigraph.la
igraph/lib.32/: libigraph.la
igraph/lib.32/pkgconfig/: igraph.pc
igraph/lib/pkgconfig/: igraph.pc
src/: atsp_operator.cpp  graph-mio.cpp  graphvizdotgenerator.h  heuristics.cpp  heuristics.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  multioperation.cpp  multioperation.h  multirelocate.cpp  multirelocate2.cpp  nodeswap.cpp  prueba.cpp  subtreeReloc.cpp  subtreeswap.cpp  tree.cpp  ui_mainwindow.h.old  vns.cpp
(+62 files in other folders)
